--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1334,7 +1334,7 @@ footer hr {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 420px;
+    min-height: 440px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1623,32 +1623,38 @@ footer hr {
     padding: 20px;
     text-decoration: none;
     height: 100%;
-    background-image: linear-gradient(-45deg, #05395B 50%, #F7F7F7 50%);
+    background-image: linear-gradient(-45deg, #05395b 50%, #f7f7f7 50%);
     border-radius: 20px;
-    background-size: 330% 100%;
+    background-size: 340% 100%;
     background-position: left bottom;
-    transition: background-position .5s ease;
+    transition: background-position 0.5s ease;
 }
 
 .hover-card-home:hover {
     background-position: right bottom;
 }
 
-.hover-card-home .dark-color, .hover-card-home .button, .hover-card-home p, .hover-card-home div.icon svg circle, .hover-card-home div.icon svg path {
-    transition: all .5s ease;
+.hover-card-home .dark-color,
+.hover-card-home .button,
+.hover-card-home p,
+.hover-card-home div.icon svg circle,
+.hover-card-home div.icon svg path,
+.hover-card-home .blue-color {
+    transition: all 0.5s ease;
 }
 
 .hover-card-home svg path {
-    stroke: #4D4D4D;
-    transition: all .5s ease;
+    stroke: #4d4d4d;
+    transition: all 0.5s ease;
 }
 
 .hover-card-home:hover svg path {
-    stroke: #FFFFFF;
+    stroke: #ffffff;
 }
 
-.hover-card-home:hover .dark-color, .hover-card-home:hover p.fs-16 {
-    color: #FFFFFF !important;
+.hover-card-home:hover .dark-color,
+.hover-card-home:hover p.fs-16, .hover-card-home:hover .blue-color {
+    color: #ffffff !important;
 }
 
 .hover-card-home:hover div.icon svg circle {
@@ -1669,18 +1675,17 @@ footer hr {
     font-size: 20px;
     font-weight: 500;
     max-width: 200px;
-    transition: all .5s ease;
+    transition: all 0.5s ease;
 }
 
 .hover-card-home:hover .button {
-    border: 1px solid #FFFFFF;
-    background-color: #CBF2FE;
+    border: 1px solid #ffffff;
+    background-color: #cbf2fe;
 }
 
 .hover-card-home:hover .button svg path {
     stroke: #000000;
 }
-
 
 .meet-us-banner {
     min-height: 75vh;
@@ -1692,10 +1697,15 @@ footer hr {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 50px;
-
 }
 
+.hover-underline {
+    transition: all 0.2s ease-in-out;
+}
 
+.hover-underline:hover {
+    text-decoration: underline;
+}
 
 @media (max-width: 1650px) {
     .sec-banner.services-pages {
@@ -1787,7 +1797,7 @@ footer hr {
         border-radius: 0px;
     }
 
-    .card-sm-img{
+    .card-sm-img {
         margin-top: 5rem;
         padding-top: 5rem;
     }
@@ -2027,7 +2037,7 @@ footer hr {
         margin-top: 0px !important;
     }
 
-    .card-sm-img{
+    .card-sm-img {
         margin-top: 3rem;
         padding-top: 0px;
     }
@@ -2036,6 +2046,4 @@ footer hr {
         border-radius: 0px;
         height: 340px;
     }
-
-
 }
