Add SEO links and fix some issues

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1003,6 +1003,23 @@ ul .li:hover {
     background-repeat: no-repeat;
 }
 
+.btn-cyan {
+    display: block;
+    width: fit-content;
+    text-decoration: none;
+    background-color: #CBF2FE;
+    padding: 14px;
+    border-radius: 7px;
+    color: #000000;
+    font-weight: 500;
+    font-size: 20px;
+    transition: all .2s ease-in-out;
+}
+
+.btn-cyan:hover{
+    transform: scale(1.08) rotate(2deg);
+}
+
 .btn-out {
     border: solid 1px gray;
     border-radius: 133px;
@@ -1161,8 +1178,8 @@ footer hr {
 }
 
 .block-padding {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 175px;
+    padding-right: 175px;
 }
 
 .custom-input {
@@ -1280,7 +1297,7 @@ footer hr {
 
 .carousal-card {
     min-width: 358px;
-    min-height: 165px;
+    min-height: 265px;
     border-radius: 18px;
     background-color: #ffffff;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -1334,7 +1351,7 @@ footer hr {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 420px;
+    min-height: 440px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1601,13 +1618,127 @@ footer hr {
     background-color: #ededed;
 }
 
+.home-page-banner {
+    min-height: 75vh;
+    width: 100%;
+    position: relative;
+    border-radius: 35px;
+    background-image: url(/assets/imgs/home/bg-2.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.hover-card-home {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+    text-decoration: none;
+    height: 100%;
+    background-image: linear-gradient(-45deg, #05395b 50%, #f7f7f7 50%);
+    border-radius: 20px;
+    background-size: 340% 100%;
+    background-position: left bottom;
+    transition: background-position 0.5s ease;
+}
+
+.hover-card-home:hover {
+    background-position: right bottom;
+}
+
+.hover-card-home .dark-color,
+.hover-card-home .button,
+.hover-card-home p,
+.hover-card-home div.icon svg circle,
+.hover-card-home div.icon svg path,
+.hover-card-home .blue-color {
+    transition: all 0.5s ease;
+}
+
+.hover-card-home svg path {
+    stroke: #4d4d4d;
+    transition: all 0.5s ease;
+}
+
+.hover-card-home:hover svg path {
+    stroke: #ffffff;
+}
+
+.hover-card-home:hover .dark-color,
+.hover-card-home:hover p.fs-16, .hover-card-home:hover .blue-color {
+    color: #ffffff !important;
+}
+
+.hover-card-home:hover div.icon svg circle {
+    stroke: #ffffff;
+}
+
+.hover-card-home:hover div.icon svg path {
+    fill: #ffffff;
+}
+
+.hover-card-home .button {
+    margin-top: auto;
+    border: 1px solid #000000;
+    color: #000000;
+    padding: 15px;
+    background-color: transparent;
+    border-radius: 50px;
+    font-size: 20px;
+    font-weight: 500;
+    max-width: 200px;
+    transition: all 0.5s ease;
+}
+
+.hover-card-home:hover .button {
+    border: 1px solid #ffffff;
+    background-color: #cbf2fe;
+}
+
+.hover-card-home:hover .button svg path {
+    stroke: #000000;
+}
+
+.meet-us-banner {
+    min-height: 75vh;
+    width: 100%;
+    position: relative;
+    border-radius: 35px;
+    background-image: url(/assets/imgs/meet-us/banner.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px;
+}
+
+.hover-underline {
+    transition: all 0.2s ease-in-out;
+}
+
+.hover-underline:hover {
+    text-decoration: underline;
+}
+
 @media (max-width: 1650px) {
     .sec-banner.services-pages {
         height: 700px;
     }
+    .block-padding {
+        padding-left: 150px;
+        padding-right: 150px;
+    }
 }
 
 @media (max-width: 1400px) {
+    .block-padding {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
     .bg-img4 {
         background-position: bottom;
     }
@@ -1683,7 +1814,7 @@ footer hr {
         border-radius: 0px;
     }
 
-    .card-sm-img{
+    .card-sm-img {
         margin-top: 5rem;
         padding-top: 5rem;
     }
@@ -1831,9 +1962,18 @@ footer hr {
 }
 
 @media (max-width: 768px) {
+    .chat-icon {
+        top: 75vh;
+    }
+    .appointment-icon {
+        top: 85vh;
+    }
+    .youtube-vedio {
+        height: 25vh;
+    }
     .page-bg-image {
         min-height: 550px;
-        background-size: auto;
+        background-size: cover;
     }
     .bg-img2,
     .bg-img3 {
@@ -1914,7 +2054,7 @@ footer hr {
         margin-top: 0px !important;
     }
 
-    .card-sm-img{
+    .card-sm-img {
         margin-top: 3rem;
         padding-top: 0px;
     }
@@ -1923,6 +2063,4 @@ footer hr {
         border-radius: 0px;
         height: 340px;
     }
-
-
 }
